[project]
name = "isochrone-transform"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "imageio[ffmpeg]>=2.37.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "osmnx>=2.0.7",
    "pyproj>=3.7.2",
    "quackosm>=0.16.4",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]
